--- a/development.ini
+++ b/development.ini
@@ -14,6 +14,7 @@ system.logout_url = http://localhost:9003/logout
 system.signup_url = http://localhost:9003/signup
 system.accounts_url = http://localhost:9003/users/
 system.meta_url = http://localhost:9005
+system.help_url = http://localhost:9001
 
 system.auth_session_cookie_name = auth_session_id
 
