--- a/development.ini
+++ b/development.ini
@@ -15,6 +15,7 @@ system.signup_url = http://localhost:9003/signup
 system.accounts_url = http://localhost:9003/users/
 system.meta_url = http://localhost:9005
 system.help_url = http://localhost:9001
+system.platform_url = http://localhost:9010
 
 system.auth_session_cookie_name = auth_session_id
 
