included new pyramid debugtoolbar

--- a/development.ini
+++ b/development.ini
@@ -1,11 +1,12 @@
-[app:defpage.base]
+[app:main]
 use = egg:defpage.base
-reload_templates = true
-debug_siteorization = false
-debug_notfound = false
-debug_routematch = false
-debug_templates = true
-default_locale_name = en
+
+pyramid.reload_templates = true
+pyramid.debug_authorization = false
+pyramid.debug_notfound = false
+pyramid.debug_routematch = false
+pyramid.default_locale_name = en
+pyramid.includes = pyramid_debugtoolbar
 
 system.static_url = http://localhost:9002/static
 system.sessions_url = http://localhost:9003/sessions/
@@ -19,13 +20,8 @@ system.platform_url = http://localhost:9010
 
 system.auth_session_cookie_name = auth_session_id
 
-[pipeline:main]
-pipeline =
-    egg:WebError#evalerror
-    defpage.base
-
 [server:main]
-use = egg:Paste#http
+use = egg:waitress#main
 host = 0.0.0.0
 port = 9001
 
