--- a/development.ini
+++ b/development.ini
@@ -6,7 +6,7 @@ pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
-pyramid.includes = pyramid_debugtoolbar
+#pyramid.includes = pyramid_debugtoolbar
 
 system.static_url = http://localhost:9002/static
 system.sessions_url = http://localhost:9003/sessions/
