custom params for unencripted session cookie

--- a/development.ini
+++ b/development.ini
@@ -18,6 +18,11 @@ system.meta_url = http://localhost:9005
 system.help_url = http://localhost:9001
 system.platform_url = http://localhost:9010
 
+system.domain_base = localhost
+
+system.unencrypted_session_cookie_name = un_session
+system.unencrypted_session_cookie_secret = dRfbG34A
+
 system.auth_session_cookie_name = auth_session_id
 
 [server:main]
