--- a/staging.ini
+++ b/staging.ini
@@ -18,6 +18,11 @@ system.meta_url = http://localhost:9005
 system.help_url = http://staging.defpage.com
 system.platform_url = http://localhost:9010
 
+system.domain_base = staging.defpage.com
+
+system.unencrypted_session_cookie_name = un_session
+system.unencrypted_session_cookie_secret = 4Hj7s9Gs
+
 system.auth_session_cookie_name = auth_session_id
 
 [server:main]
