--- a/staging.ini
+++ b/staging.ini
@@ -18,7 +18,7 @@ system.meta_url = http://localhost:9005
 system.help_url = http://staging.defpage.com
 system.platform_url = http://localhost:9010
 
-system.domain_base = staging.defpage.com
+system.domain_base = .staging.defpage.com
 
 system.unencrypted_session_cookie_name = un_session
 system.unencrypted_session_cookie_secret = 4Hj7s9Gs
