common domain is empty for localhost case

--- a/development.ini
+++ b/development.ini
@@ -18,7 +18,7 @@ system.meta_url = http://localhost:9005
 system.help_url = http://localhost:9001
 system.platform_url = http://localhost:9010
 
-system.common_cookies_domain = localhost
+system.common_cookies_domain =
 
 system.unencrypted_session_cookie_name = un_session
 system.unencrypted_session_cookie_secret = dRfbG34A
