--- a/staging.ini
+++ b/staging.ini
@@ -17,6 +17,7 @@ system.accounts_url = http://security.staging.defpage.com/users/
 system.meta_url = http://localhost:9005
 system.help_url = http://staging.defpage.com
 system.platform_url = http://localhost:9010
+system.gd_ui_url = http://gd.staging.defpage.com
 
 system.common_cookies_domain = .staging.defpage.com
 
