--- a/development.ini
+++ b/development.ini
@@ -17,6 +17,7 @@ system.accounts_url = http://localhost:9003/users/
 system.meta_url = http://localhost:9005
 system.help_url = http://localhost:9001
 system.platform_url = http://localhost:9010
+system.gd_ui_url = http://localhost:9020
 
 system.common_cookies_domain =
 
